# metric-tracking-system

./: .editorconfig  .prettierrc.yaml  README.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  watt.json
apps/metric-tracking-api/: package.json  tsconfig.json
apps/metric-tracking-api/plugins/: config.ts  example.ts  mongodb.ts  types.ts
apps/metric-tracking-api/routes/: index.ts  root.ts  shared.ts
apps/metric-tracking-api/routes/metrics/: create-metric.ts  get-metrics-by-unit-type.ts  get-metrics-chart-view-by-unit-type.ts  get-metrics-chart-view-shared.ts  get-metrics-chart-view.ts  get-metrics.ts  shared.ts  types.ts
apps/metric-tracking-api/test/: helper.ts
node/: .gitignore  .prettierrc.yaml
node/bun/elysia/: .env.sample  bunfig.toml  llms-full.txt  llms.txt  package.json  tsconfig.json
node/bun/elysia/src/: bootstrap.ts  index.ts  main.ts
node/bun/elysia/src/config/: mongodb.ts
node/bun/elysia/src/plugins/: mongodb.ts
node/bun/elysia/src/routes/: index.ts
node/bun/elysia/tests/: math.test.ts  post_metric.di.test.ts  post_metric.inmemory.test.ts  root.test.ts
node/bun/elysia/tests/helpers/: mockCollection.ts
node/watt/: .env.sample  .gitignore  README.md  pnpm-lock.yaml  pnpm-workspace.yaml
node/watt/apps/metric-tracking-api/: README.md  package.json  plt-env.d.ts  watt.json
rust/axum/: .env.example  .gitignore  .prettierrc.yaml  Cargo.toml
rust/axum/.cargo/: config.toml
rust/axum/src/: main.rs
rust/axum/src/config/: mod.rs  tracing.rs
rust/axum/src/routes/: mod.rs  shared.rs
rust/axum/tools/cargo-bin/src/: main.rs
(+10 files in other folders)
