[package]
name = "metric-tracking-api"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.6"
tokio = { version = "1.48.0", features = ["full"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
serde_with = "3.15.1"

[workspace]
members = ["tools/cargo-bin"]

[workspace.metadata.bin]
cargo-binstall = { version = "1.15.7" }
cargo-nextest = { version = "0.9.108" }
bacon = { version = "3.19.0" }
