[package]
name = "metric-tracking-api"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.6"
tokio = { version = "1.48.0", features = ["full"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
serde_with = "3.15.1"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["env-filter", "json"] }
tower-http = { version = "0.6.6", features = ["trace"] }
dotenvy = "0.15.7"
futures = "0.3.31"
mongodb = "3.3.0"

[workspace]
members = ["tools/cargo-bin"]

[workspace.metadata.bin]
cargo-binstall = { version = "1.15.7" }
cargo-outdated = { version = "0.17.0" }
cargo-nextest = { version = "0.9.108" }
bacon = { version = "3.19.0" }
